# CHANOT-Industry-

./: README.md
rag/crowe/: forni.py  myworkers.py  pyproject.toml
rag/crowe/src/crowe/: __init__.py
rag/crowe/templates/: chatting.html
