[project]
name = "crowe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hdutfj", email = "156539429+Hdutfj@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask-session>=0.8.0",
    "openai-agents>=0.0.17",
    "pymupdf>=1.26.0",
]

[project.scripts]
crowe = "crowe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
